@@ -6,6 +6,7 @@
   - Removed squish function from Mojo::Util.
   - Removed support for smart whitespace trimming from all_text and text methods
     in Mojo::DOM.
+  - Fixed trailing slash bug in Mojo::URL.
   - Fixed a few whitespace bugs in Mojo::DOM.
 
 6.66  2016-06-16
